--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <button class="فایل">انتخاب فایل</button>
         <div class="کادرپرایوت">
           <p>پیش‌نمایش در اینجا نمایش داده می‌شود</p>
+          <p>tst</p>
         </div>
       </div>
     </main>
