--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="کادرپرایوت">
           <p>پیش‌نمایش در اینجا نمایش داده می‌شود</p>
           <span>Ttttt</span>
+          <span>Ttttt</span>
         </div>
       </div>
     </main>
