--- a/login.html
+++ b/login.html
@@ -5,8 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>📷Login</title>
   <link rel="stylesheet" href="login.css">
+   <div class="nav-icons">
+  <a href="index.html">
+    <img src="Khone.png" alt="khone" width="60">
+  </a>
+  <a href="darbare.html">
+    <img src="soal.jpg" alt="درباره ما" width="60">
+  </a>
+</div>
+  </div>
 </head>
 <body>
+  <div class="meunobala">
+</div>
   <div class="container">
     <input type="text" id="n1" placeholder="نام کاربری">
     <input type="text" id="n2" placeholder="رمز عبور">
