--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <a href="darbare.html">
     <img src="soal.jpg" alt="درباره ما" width="60">
   </a>
+   <a href="delet.html">
+    <img src="Delet.webp" alt="khone" width="60">
+   </a>
 </div>
 </head>
 <body>
