--- a/delet.html
+++ b/delet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>درباره ما</title>
+    <title>Delet</title>
     <link rel="stylesheet" href="delet.css">
      <div class="nav-icons">
         <a href="darbare.html">
