--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
    <a href="delet.html">
     <img src="Delet.webp" alt="khone" width="60">
    </a>
+   <a href="poshtiban.html">
+    <img src="Poshtiban.jpg" alt="Poshtiban" width="60">
+   </a>
 </div>
 </head>
 <body>
