--- a/poshtiban.html
+++ b/poshtiban.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poshtiban</title>
-    <link rel="stylesheet" href="poshtiban.css">
-     <div class="nav-icons">
-        <a href="darbare.html">
-    <img src="soal.jpg" alt="delet" width="60">
-  </a>
-  <a href="login.html">
-    <img src="Karbar.jpeg" alt="login" width="60">
-    </a>
-     <a href="index.html">
-    <img src="Khone.png" alt="Khone" width="60">
-    </a>
-</div>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>پشتیبانی</title>
+  <link rel="stylesheet" href="poshtiban.css">
 </head>
 <body>
-  <div class="meunobala">
-</div>
-    <section class="about">
-  <h2>Poshtiban List :</h2>
-  <p><strong>@AmirLixx</strong>  :درحال توسعه  توسط </p>
- <img src="logo.png" alt="لوگو" class="logo">
+  <div class="meunobala"></div>
+
+  <div class="nav-icons">
+    <a href="darbare.html">
+      <img src="soal.jpg" alt="سوالات">
+    </a>
+    <a href="login.html">
+      <img src="Karbar.jpeg" alt="ورود">
+    </a>
+    <a href="index.html">
+      <img src="Khone.png" alt="خانه">
+    </a>
+  </div>
+
+  <section class="about">
+    <h2>پشتیبانی آنلاین</h2>
+    <p><strong>@AmirLixx</strong> : در حال توسعه توسط</p>
+
+    <div class="chat-box">
+      <div class="chat-header">گفتگو با پشتیبانی</div>
+      <div class="chat-messages">
+        <div class="message support">سلا چطور می‌تونم کمکت کنم؟ </div>
+      </div>
+      <div class="chat-input-area">
+        <input type="text" placeholder="پیامت رو بنویس..." disabled>
+        <button disabled>ارسال</button>
+      </div>
+    </div>
+  </section>
+
+  <img src="logo.png" alt="لوگو" class="logo">
 </body>
 </html>
