--- a/delet.html
+++ b/delet.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delet</title>
-    <link rel="stylesheet" href="delet.css">
-     <div class="nav-icons">
-        <a href="darbare.html">
-    <img src="soal.jpg" alt="delet" width="60">
-  </a>
-  <a href="login.html">
-    <img src="Karbar.jpeg" alt="login" width="60">
-    </a>
-     <a href="index.html">
-    <img src="Khone.png" alt="Khone" width="60">
-    </a>
-</div>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>حذف فایل</title>
+  <link rel="stylesheet" href="delet.css">
 </head>
 <body>
-  <div class="meunobala">
-</div>
-    <section class="about">
-  <h2>Delet List :</h2>
-  <p><strong>@AmirLixx</strong>  :درحال توسعه  توسط </p>
- <img src="logo.png" alt="لوگو" class="logo">
+  <div class="meunobala"></div>
+
+  <div class="nav-icons">
+    <a href="darbare.html">
+      <img src="soal.jpg" alt="درباره ما">
+    </a>
+    <a href="login.html">
+      <img src="Karbar.jpeg" alt="ورود">
+    </a>
+    <a href="index.html">
+      <img src="Khone.png" alt="خانه">
+    </a>
+  </div>
+
+  <section class="about">
+    <h2>حذف فایل آپلود شده</h2>
+    <p><strong>@AmirLixx</strong> : در حال توسعه توسط</p>
+
+    <div class="delete-box">
+      <p>برای حذف فایل اسم آن را وارد کنید </p>
+      <input type="text" placeholder="مثلا:Web.jpg">
+      <button>حذف فایل</button>
+    </div>
+  </section>
+
+  <img src="logo.png" alt="لوگو" class="logo">
 </body>
 </html>
