--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
    <a href="poshtiban.html">
     <img src="Poshtiban.jpg" alt="Poshtiban" width="60">
    </a>
+   <a href="Vip.html">
+    <img src="vip.jpg" alt="Vip" width="60">
+   </a>
 </div>
 </head>
 <body>
