--- a/header-footer.html
+++ b/header-footer.html
@@ -1,11 +1,13 @@
+<!-- header-footer.html -->
 <header>
   <div class="nav-icons">
     <a href="index.php"><img src="Khone.png" alt="خانه"></a>
-    <a href="darbare.php"><img src="soal.jpg" alt="درباره ما"></a>
-    <a href="delet.php"><img src="Delet.webp" alt="حذف فایل"></a>
-    <a href="poshtiban.php"><img src="Poshtiban.jpg" alt="پشتیبانی"></a>
-    <a href="Vip.php"><img src="vip.jpg" alt="VIP"></a>
-    <a href="login.php"><img src="Karbar.jpeg" alt="ورود"></a>
+    <a href="darbare.php"><img src="soal.jpg" alt="درباره"></a>
+    <a href="delet.php"><img src="Delet.webp" alt="حذف"></a>
+    <a href="poshtiban.php"><img src="Poshtiban.jpg" alt="پشتیبان"></a>
+    <a href="Vip.php"><img src="vip.jpg" alt="وی آی پی"></a>
+    <a href="login.php"><img src="Karbar.jpeg" alt="کاربر"></a>
+    <a href="nazarat.php"><img src="nazarat.png" alt="نظرات کاربران "></a>
   </div>
 </header>
 
